# 2D_FacilitatedExclusionProcess

./: CMakeLists.txt  README.md
include/: Edge.hpp  ParticleSystem.hpp  Site.hpp
simulations/Absorption_time/: computeAbsorptionTime.cpp  post_process.py
simulations/Active_sites_density/: computeActiveSitesDensity.cpp  post_process.py
simulations/Diffusion_coefficient/: computeDiffusionCurrent.cpp  post_process.py
simulations/Structure_function/: computeStructureFunction.cpp  post_process.py
src/: Edge.cpp  ParticleSystem.cpp  Site.cpp
